--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Burger Landing</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <img src="images/logo.png" alt="logo" class="header_logo">
+
+            <nav class="header_nav">
+                <ul class="header_list">
+                    <li><a href="#" class="active">HOME</a></li>
+                    <li><a href="#">PAGES</a></li>
+                    <li><a href="#">OUR OFFER</a></li>
+                    <li><a href="#">PRICING</a></li>
+                    <li><a href="#">SHOP</a></li>
+                </ul>
+            </nav>
+
+            <a href="#" class="btn">Order now</a>
+        </div>
+    </header>
 </body>
 </html>
